--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.nata.maven.plugin</groupId>
 	<artifactId>nata-maven-plugin</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.2-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
 
 	<distributionManagement>
@@ -58,6 +59,35 @@
 		</dependency>
 	</dependencies>
 
+	<profiles>
+		<profile>
+			<id>releases</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<version>1.5.1</version>
+						<executions>
+							<execution>
+								<id>default-deploy</id>
+								<phase>deploy</phase>
+								<goals>
+									<goal>deploy</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<serverId>nexus-releases</serverId>
+							<nexusUrl>http://localhost:8081/nexus/</nexusUrl>
+							<skipStaging>true</skipStaging>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 	<build>
 		<finalName>maven-test</finalName>
 		<pluginManagement>
@@ -88,25 +118,25 @@
 						</execution>
 					</executions>
 				</plugin>
-				<plugin>
-					<groupId>org.sonatype.plugins</groupId>
-					<artifactId>nexus-staging-maven-plugin</artifactId>
-					<version>1.5.1</version>
-					<executions>
-						<execution>
-							<id>default-deploy</id>
-							<phase>deploy</phase>
-							<goals>
-								<goal>deploy</goal>
-							</goals>
-						</execution>
-					</executions>
-					<configuration>
-						<serverId>nexus</serverId>
-						<nexusUrl>http://localhost:8081/nexus/</nexusUrl>
-						<skipStaging>true</skipStaging>
-					</configuration>
-				</plugin>
+<!-- 				<plugin> -->
+<!-- 					<groupId>org.sonatype.plugins</groupId> -->
+<!-- 					<artifactId>nexus-staging-maven-plugin</artifactId> -->
+<!-- 					<version>1.5.1</version> -->
+<!-- 					<executions> -->
+<!-- 						<execution> -->
+<!-- 							<id>default-deploy</id> -->
+<!-- 							<phase>deploy</phase> -->
+<!-- 							<goals> -->
+<!-- 								<goal>deploy</goal> -->
+<!-- 							</goals> -->
+<!-- 						</execution> -->
+<!-- 					</executions> -->
+<!-- 					<configuration> -->
+<!-- 						<serverId>nexus</serverId> -->
+<!-- 						<nexusUrl>http://localhost:8081/nexus/</nexusUrl> -->
+<!-- 						<skipStaging>true</skipStaging> -->
+<!-- 					</configuration> -->
+<!-- 				</plugin> -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-release-plugin</artifactId>
@@ -115,7 +145,7 @@
 						<tagNameFormat>v@{project.version}</tagNameFormat>
 						<autoVersionSubmodules>true</autoVersionSubmodules>
 						<releaseProfiles>releases</releaseProfiles>
-						<tagBase>https://github.com/NataschaM/tags</tagBase>
+						<tagBase>/home/nata/workspace-web/tags</tagBase>
 					</configuration>
 				</plugin>
 			</plugins>
@@ -126,5 +156,6 @@
 		<url>http://github.com/NataschaM/Probe</url>
 		<connection>scm:git:https://github.com/NataschaM/Probe.git</connection>
 		<developerConnection>scm:git:https://github.com/NataschaM/Probe.git</developerConnection>
+		<tag>HEAD</tag>
 	</scm>
 </project>
