--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.nata.maven.plugin</groupId>
 	<artifactId>nata-maven-plugin</artifactId>
-	<version>1.0.6-SNAPSHOT</version>
+	<version>1.0.6</version>
 	<packaging>maven-plugin</packaging>
 
 	<distributionManagement>
@@ -161,6 +161,6 @@
 		<url>http://github.com/NataschaM/Probe</url>
 		<connection>scm:git:https://github.com/NataschaM/Probe.git</connection>
 		<developerConnection>scm:git:https://github.com/NataschaM/Probe.git</developerConnection>
-	  <tag>HEAD</tag>
+	  <tag>v1.0.6</tag>
   </scm>
 </project>
