--- a/pom.xml
+++ b/pom.xml
@@ -165,10 +165,10 @@
 					<artifactId>maven-release-plugin</artifactId>
 					<version>2.5.3</version>
 					<configuration>
+						<useReleaseProfile>false</useReleaseProfile>
 						<releaseProfiles>release</releaseProfiles>
 						<tagNameFormat>v@{project.version}</tagNameFormat>
 						<autoVersionSubmodules>true</autoVersionSubmodules>
-						<releaseProfiles>releases</releaseProfiles>
 						<tagBase>scm:git:https://github.com/NataschaM/tags.git</tagBase>
 					</configuration>
 				</plugin>
