--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,11 @@
 					<artifactId>maven-scm-plugin</artifactId>
 					<version>1.9.5</version>
 				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>versions-maven-plugin</artifactId>
+					<version>2.3</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
